syntax = "proto3";
package comdex.vault.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/vault/v1beta1/vault.proto";

option go_package            = "github.com/comdex-official/comdex/x/vault/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message VaultInfo{
  string id = 1;
  uint64 extended_pair_id = 2 [
    (gogoproto.customname) = "ExtendedPairID",
    (gogoproto.moretags)   = "yaml:\"extended_pair_id\""
  ];
  string owner     = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

  string collateral = 4 [
    (gogoproto.moretags) = "yaml:\"collateral\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  string debt = 5 [
    (gogoproto.moretags) = "yaml:\"debt\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  string collateralization_ratio = 6 [
    (gogoproto.moretags) = "yaml:\"collateralization_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string extended_pair_name     = 7 [ (gogoproto.moretags) = "yaml:\"extended_pair_name\"" ];

  string interest_rate        = 8 [ 
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"interest_rate\"" 
    ];
    string asset_in_denom     = 9 [ (gogoproto.moretags) = "yaml:\"asset_in_denom\"" ];
    string asset_out_denom     = 10 [ (gogoproto.moretags) = "yaml:\"asset_out_denom\"" ];
    string min_cr               = 11 [ 
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"min_cr\"" 
    ];
}

message QueryVaultRequest {
  string id = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryVaultResponse {
  Vault vault = 1[
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryVaultInfoRequest {
  string id    = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryVaultInfoResponse {
  VaultInfo vaultsInfo = 1 [
    (gogoproto.customname) = "VaultsInfo",
    (gogoproto.moretags)   = "yaml:\"vaultsInfo\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryVaultInfoByAppByOwnerRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryVaultInfoByAppByOwnerResponse {
 repeated VaultInfo vaultsInfo = 1 [
    (gogoproto.customname) = "VaultsInfo",
    (gogoproto.moretags)   = "yaml:\"vaultsInfo\"",
    (gogoproto.nullable)   = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsResponse {
  repeated Vault vault = 1 [
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsByProductRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryAllVaultsByProductResponse {
  repeated Vault vault = 1 [
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsByAppAndExtendedPairRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsByAppAndExtendedPairResponse {
  repeated Vault vault = 1 [
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultOfOwnerByExtendedPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 extended_pair_id = 3 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 4
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultOfOwnerByExtendedPairResponse {
  string vault_Id = 1 [ (gogoproto.moretags) = "yaml:\"vault_Id\"" ];
}

message QueryVaultByProductRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultByProductResponse {
  repeated string vault_ids = 1 [ (gogoproto.moretags) = "yaml:\"vault_ids\"" ];
}

message QueryAllVaultByOwnerRequest {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultByOwnerResponse {
  repeated string vault_ids = 1 [ (gogoproto.moretags) = "yaml:\"vault_ids\"" ];
}

message QueryTokenMintedAllProductsByPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedAllProductsByPairResponse {
  string token_minted = 1 [ 
  (gogoproto.moretags) = "yaml:\"token_minted\"",
  (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
  (gogoproto.nullable)   = false ];
}

message QueryTokenMintedAllProductsRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedAllProductsResponse {
  string token_minted = 1 [ 
  (gogoproto.moretags) = "yaml:\"token_minted\"",
  (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
  (gogoproto.nullable)   = false ];
}

message QueryVaultCountByProductRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultCountByProductResponse {
  uint64 vault_count = 1 [ 
  (gogoproto.moretags) = "yaml:\"vault_count\""];
}

message QueryVaultCountByProductAndPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultCountByProductAndPairResponse {
  uint64 vault_count = 1 [ 
  (gogoproto.moretags) = "yaml:\"vault_count\""];
}

message QueryTotalValueLockedByProductExtendedPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTotalValueLockedByProductExtendedPairResponse {
  string value_locked = 1 [ 
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int" ];
}

message QueryExtendedPairIDByProductRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryExtendedPairIDByProductResponse {
  repeated uint64 extended_pair_ids = 1 [ (gogoproto.moretags) = "yaml:\"extended_pair_ids\"" ];
}

message QueryStableVaultInfoRequest {
  string stable_vault_id = 1 [ (gogoproto.moretags) = "yaml:\"stable_vault_id\"" ];
}

message QueryStableVaultInfoResponse {
  StableMintVault stable_mint_vault = 1 [ (gogoproto.moretags) = "yaml:\"stable_mint_vault\"" ];
}

message QueryAllStableVaultsRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryAllStableVaultsResponse {
  repeated StableMintVault stable_mint_vault = 1 [ (gogoproto.moretags) = "yaml:\"stable_mint_vault\"" ];
}

message QueryStableVaultByProductExtendedPairRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
}

message QueryStableVaultByProductExtendedPairResponse {
  StableMintVault stable_mint_vault = 1 [ (gogoproto.moretags) = "yaml:\"stable_mint_vault\"" ];
}

message QueryExtendedPairVaultMappingByAppAndExtendedPairIdRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
}

message QueryExtendedPairVaultMappingByAppAndExtendedPairIdResponse {
 ExtendedPairVaultMapping extendedPairVaultMapping = 1 [ (gogoproto.moretags) = "yaml:\"extendedPairVaultMapping\"" ];
}

message QueryExtendedPairVaultMappingByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryExtendedPairVaultMappingByAppResponse {
 repeated ExtendedPairVaultMapping extendedPairVaultMapping = 1 [ (gogoproto.moretags) = "yaml:\"extendedPairVaultMapping\"" ];
}

message QueryExtendedPairVaultMappingByOwnerAndAppRequest {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 app_id = 2 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryExtendedPairVaultMappingByOwnerAndAppResponse {
 repeated ExtendedPairToVaultMapping extendedPairtoVaultMapping = 1 [ (gogoproto.moretags) = "yaml:\"extendedPairtoVaultMapping\"" ];
}

message QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDRequest {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 app_id = 2 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair = 3 [ (gogoproto.moretags) = "yaml:\"extended_pair\"" ];

}

message QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDResponse {
string vaultId = 1 [ (gogoproto.moretags) = "yaml:\"vaultId\"" ];
}

message QueryTVLLockedByAppOfAllExtendedPairsRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];

}

message QueryTVLLockedByAppOfAllExtendedPairsResponse {
repeated TvlLockedDataMap tvldata = 1 [ (gogoproto.moretags) = "yaml:\"tvldata\"",
(gogoproto.nullable)   = false ];
}

message QueryTotalTVLByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];

}

message QueryTotalTVLByAppResponse {
  uint64 collateral_locked = 1 [(gogoproto.moretags) = "yaml:\"collateral_locked\""];
}

message QueryUserMyPositionByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

}

message QueryUserMyPositionByAppResponse {
  uint64 collateral_locked = 1 [(gogoproto.moretags) = "yaml:\"collateral_locked\""];
  uint64 total_due = 2 [(gogoproto.moretags) = "yaml:\"total_due\""];
  string available_to_borrow = 3 [
    (gogoproto.moretags) = "yaml:\"available_to_borrow\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string average_cr_ratio = 4 [
    (gogoproto.moretags) = "yaml:\"average_cr_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}


service Query {
  rpc QueryVault(QueryVaultRequest) returns (QueryVaultResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults/{id}";
  };

  rpc QueryVaultInfo(QueryVaultInfoRequest) returns (QueryVaultInfoResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaultsInfo/{id}";
  };

  rpc QueryVaultInfoByAppByOwner(QueryVaultInfoByAppByOwnerRequest) returns (QueryVaultInfoByAppByOwnerResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaultsInfoByOwner/{app_id}/{owner}";
  };

  rpc QueryAllVaults(QueryAllVaultsRequest) returns (QueryAllVaultsResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults";
  };
  rpc QueryAllVaultsByProduct(QueryAllVaultsByProductRequest) returns (QueryAllVaultsByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults-by-product/{app_id}";
  };
  rpc QueryAllVaultsByAppAndExtendedPair(QueryAllVaultsByAppAndExtendedPairRequest) returns (QueryAllVaultsByAppAndExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults-by-app-and-extended-pair/{app_id}/{extended_pair_id}";
  };

  rpc QueryVaultOfOwnerByExtendedPair(QueryVaultOfOwnerByExtendedPairRequest) returns (QueryVaultOfOwnerByExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vault-of-owner-by-extended-pair/{product_id}/{owner}/{extended_pair_id}";
  };

  rpc QueryVaultByProduct(QueryVaultByProductRequest) returns (QueryVaultByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairvaults-by-product/{product_id}";
  };

  rpc QueryAllVaultByOwner(QueryAllVaultByOwnerRequest) returns (QueryAllVaultByOwnerResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults-by-owner/{owner}";
  };

  rpc QueryTokenMintedAllProductsByPair(QueryTokenMintedAllProductsByPairRequest) returns (QueryTokenMintedAllProductsByPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/token-minted-by-products-extended-pair/{product_id}/{extended_pair_id}";
  };

  rpc QueryTokenMintedAllProducts(QueryTokenMintedAllProductsRequest) returns (QueryTokenMintedAllProductsResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/token-minted-by-products/{product_id}";
  };

  rpc QueryVaultCountByProduct(QueryVaultCountByProductRequest) returns (QueryVaultCountByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vault-count-by-products/{product_id}";
  };

  rpc QueryVaultCountByProductAndPair(QueryVaultCountByProductAndPairRequest) returns (QueryVaultCountByProductAndPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vault-count-by-products-and-pair/{product_id}/{extended_pair_id}";
  };

  rpc QueryTotalValueLockedByProductExtendedPair(QueryTotalValueLockedByProductExtendedPairRequest) returns (QueryTotalValueLockedByProductExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/value-locked-by-product-pair/{product_id}/{extended_pair_id}";
  };

  rpc QueryExtendedPairIDByProduct(QueryExtendedPairIDByProductRequest) returns (QueryExtendedPairIDByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/external-pair-by-product/{product_id}";
  };

  rpc QueryStableVaultInfo(QueryStableVaultInfoRequest) returns (QueryStableVaultInfoResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/stable-vault-by-id/{stable_vault_id}";
  };

  rpc QueryAllStableVaults(QueryAllStableVaultsRequest) returns (QueryAllStableVaultsResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/stable-vault-by-product/{app_id}";
  };

  rpc QueryStableVaultByProductExtendedPair(QueryStableVaultByProductExtendedPairRequest) returns (QueryStableVaultByProductExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/stable-vault-by-product-extendedPair/{app_id}/{extended_pair_id}";
  };
  
  rpc QueryExtendedPairVaultMappingByAppAndExtendedPairId(QueryExtendedPairVaultMappingByAppAndExtendedPairIdRequest) returns (QueryExtendedPairVaultMappingByAppAndExtendedPairIdResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-product-and-ExtendedPairId/{app_id}/{extended_pair_id}";
  };

  rpc QueryExtendedPairVaultMappingByApp(QueryExtendedPairVaultMappingByAppRequest) returns (QueryExtendedPairVaultMappingByAppResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-product/{app_id}";
  };

  rpc QueryExtendedPairVaultMappingByOwnerAndApp(QueryExtendedPairVaultMappingByOwnerAndAppRequest) returns (QueryExtendedPairVaultMappingByOwnerAndAppResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-owner-and-product/{owner}/{app_id}";
  };

  rpc QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairID(QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDRequest) returns (QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-owner-product-extendedPair/{owner}/{app_id}/{extended_pair}";
  };

  rpc QueryTVLLockedByAppOfAllExtendedPairs(QueryTVLLockedByAppOfAllExtendedPairsRequest) returns (QueryTVLLockedByAppOfAllExtendedPairsResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/tvl-locked-by-app-all-extended-pairs/{app_id}";
  };

  rpc QueryTotalTVLByApp(QueryTotalTVLByAppRequest) returns (QueryTotalTVLByAppResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/tvl-locked-by-app/{app_id}";
  };

  rpc QueryUserMyPositionByApp(QueryUserMyPositionByAppRequest) returns (QueryUserMyPositionByAppResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/user-my-position-by-app/{app_id}/{owner}";
  };
}